--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
 .container-1 {
     background-color: #1F2937;
 }
 
+/* Header CSS */
 .header {
     margin: 0 auto;
     max-width: 1100px;
@@ -35,6 +38,7 @@ body {
     color: #E5E7EB;
 }
 
+/* Hero Block CSS */
 .hero {
     display: flex;
     padding: 90px;
@@ -78,3 +82,39 @@ body {
     height: 253px;
     border: 1px solid white;
 }
+
+/* Mid-web CSS */
+
+.container-2 {
+    padding: 50px;
+}
+
+.container-2 h1 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin-bottom: 35px;
+}
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.gallery p {
+    max-width: 200px;
+    border:4px;
+    margin: 5px 20px 0px 20px;
+}
+
+.gallery img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border:4px solid #3882f6;
+    border-radius: 15px;
+    margin: 5px 20px 0px 20px;
+}
+
+/* Quote CSS */
