--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 10px;
 }
 
 .header p {
@@ -58,12 +59,13 @@ body {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
-    margin: 0;
+    margin: 15px 0;
 }
 
 .hero-left p {
     font-size: 18px;
     color: #E5E7EB;
+    margin-bottom: 15px;
 }
 
 .hero-left button {
@@ -80,7 +82,8 @@ body {
 #dunas {
     width: 550px;
     height: 253px;
-    border: 1px solid white;
+    border: 2px solid #3882f6;
+    border-radius: 20px;
 }
 
 /* Mid-web CSS */
