--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     height: 40px;
     font-weight: bold;
     font-size: 18px;
+    cursor: pointer;
 }
 
 #dunas {
@@ -140,6 +141,7 @@ body {
 }
 
 #author {
+    margin-top: 15px;
     font-weight: bold;
     text-align: right;
 }
@@ -165,6 +167,7 @@ body {
     height: 40px;
     font-weight: bold;
     font-size: 20px;
+    cursor: pointer;
 }
 .action {
     display: flex;
